--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -6,8 +6,21 @@
   
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav ml-auto">
+
         <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/contato">Cadastrar contato</a>
+        </li>
+
+        <% if (user) {%>
+          <li class="nav-item">
+            <a class="nav-link" href="/login/logout">Sair</a>
+          </li>
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Entrar</a>
+          </li>
+        <% } %>
+
       </ul>
     </div>
   </nav>
