--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,13 +8,15 @@
             <h1 class="text-center">Agenda</h1>
             <p class="text-center lead">Seus contatos estão abaixo</p>
 
+            <%- include('includes/messages') %>
+
             <div class="responsive-table">
                 <table class="table my-3">
                     <tr>
-                        <td>Luiz</td>
-                        <td>Otavio</td>
+                        <td>Ana Caroline</td>
+                        <td>Nogueira D'Oliveira</td>
                         <td>21999342779</td>
-                        <td>otavio.miranda@gmail.com</td>
+                        <td>carolnogueira13@gmail.com</td>
                     </tr>
                 </table>
             </div>
