--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -10,7 +10,11 @@
 
             <%- include('includes/messages') %>
 
-            <form action="contato/register" method="POST">
+            <% if (contato._id) { %>
+            <form action="/contato/edit/<%= contato._id %>" method="POST">
+            <% } else { %>
+            <form action="/contato/register" method="POST">
+            <% } %>
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
                 <div class="form-group">
@@ -33,7 +37,11 @@
                     <input  value="<%= contato.telefone %>" type="tel" class="form-control" name="telefone" id="exampleInputTelefone" aria-describedby="telefoneHelp" placeholder="Seu telefone">
                 </div>
                 
+                <% if (contato._id) { %>
+                <button type="submit" class="btn btn-primary">Editar</button>
+                <% } else { %>
                 <button type="submit" class="btn btn-primary">Salvar</button>
+                <% } %>
             </form>
 
         </div>
