--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,26 +2,40 @@
 <%- include('includes/nav'); %>
 
 <div class="container">
-    <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8 my-3">
+    <div class="row justify-content-center">
+        <div class="col-lg-10 my-3">
             <h1 class="text-center">Agenda</h1>
             <p class="text-center lead">Seus contatos estão abaixo</p>
 
             <%- include('includes/messages') %>
 
+            <% if (contatos.length > 0 ) { %>
             <div class="responsive-table">
                 <table class="table my-3">
                     <tr>
-                        <td>Ana Caroline</td>
-                        <td>Nogueira D'Oliveira</td>
-                        <td>21999342779</td>
-                        <td>carolnogueira13@gmail.com</td>
+                        <td>Nome</td>
+                        <td>Sobrenome</td>
+                        <td>E-mail</td>
+                        <td>Telefone</td>
+                        <td></td>
+                        <td></td>
                     </tr>
+                    <% contatos.forEach( contato => { %>
+                    <tr>
+                        <td><%= contato.nome %></td>
+                        <td><%= contato.sobrenome %></td>
+                        <td><%= contato.email %></td>
+                        <td><%= contato.telefone %></td>
+                        <td><a href="/contato/<%= contato._id %>">Editar</a></td>
+                        <td><a  class="text-danger" href="/contato/delete/<%= contato._id %>">Excluir</a></td>        
+                    </tr>
+                    <% }); %>
                 </table>
             </div>
+            <% } else { %>
+                <p class="text-center lead">Não existem contatos na sua agenda</p>
+            <% } %> 
         </div>
-        <div class="col-lg-2"></div>
     </div>
 </div>
 
