--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,10 +11,10 @@
             <%- include('includes/messages'); %>
 
             <div class="row">
-                <div class="col-lg">
+                <div class="col-lg my-5">
                     <h4>Faça o seu cadastro</h4>
                     <p>Se você ainda não tem conta, preencha o formulário abaixo.</p>
-                    <form action="/login/register" method="POST">
+                    <form class="form-cadastro" action="/login/register" method="POST">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <div class="form-group">
                           <label for="exampleInputEmail1">Seu e-mail</label>
@@ -29,18 +29,18 @@
                 
                 </div>
                 
-                <div class="col-lg">
+                <div class="col-lg my-5">
                     <h4>Faça o seu login</h4>
                     <p>Se você já tem uma conta, faça login abaixo.</p>
-                    <form action="login/login" method="POST">
+                    <form class="form-login" action="login/login" method="POST">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <div class="form-group">
-                          <label for="exampleInputEmail1">Seu e-mail</label>
-                          <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+                          <label for="exampleInputEmail2">Seu e-mail</label>
+                          <input type="email" class="form-control" name="email" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Seu email">
                         </div>
                         <div class="form-group">
-                          <label for="exampleInputPassword1">Sua Senha</label>
-                          <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Senha">
+                          <label for="exampleInputPassword2">Sua Senha</label>
+                          <input type="password" class="form-control" name="password" id="exampleInputPassword2" placeholder="Senha">
                         </div>
                         <button type="submit" class="btn btn-primary">Entrar</button>
                     </form>
