--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -11,9 +11,9 @@
             <%- include('includes/messages') %>
 
             <% if (contato._id) { %>
-            <form action="/contato/edit/<%= contato._id %>" method="POST">
+            <form class="form-edit" action="/contato/edit/<%= contato._id %>" method="POST">
             <% } else { %>
-            <form action="/contato/register" method="POST">
+            <form class="form-registro" action="/contato/register" method="POST">
             <% } %>
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
