--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -38,11 +38,14 @@
                 </div>
                 
                 <% if (contato._id) { %>
-                <button type="submit" class="btn btn-primary">Editar</button>
+                <button type="submit" class="btn btn-primary my-2">Editar</button>
                 <% } else { %>
-                <button type="submit" class="btn btn-primary">Salvar</button>
+                <button type="submit" class="btn btn-primary my-2">Salvar</button>
                 <% } %>
+                <button type="button" class="btn btn-primary voltar my-2" style="margin-left: 40px;">Voltar</button>
+
             </form>
+            
 
         </div>
         <div class="col-lg-2"></div>
