--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-darl bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark bg-info">
     <a class="navbar-brand" href="/">Agenda</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
